--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div id="app" class="container">
       <span class="d-flex justify-content-center mt-3" ><h4>Login</h4></span>
-      <form @submit.prevent="validateFormLogin(username, password)" >
+      <form @submit.prevent="loginUser(username, password)" >
         <fieldset >
          
           <div class="mb-3">
